src/objects/CampaignActivity__c.object
<CustomObject>
    <description>This object stores the campaign activity when communications are sent from Marketing Cloud.</description>
    <fields>
        <fullName>AccountName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaign Activity History</relationshipLabel>
        <relationshipName>Campaign_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActivityDescription__c</fullName>
        <label>Activity Description</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CampaignActivityLevel__c</fullName>
        <label>Campaign Activity Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Service &amp; Payee Location Address</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CampaignName__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The campaign this activity is a part of.</inlineHelpText>
        <label>Campaign Name</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Activities</relationshipLabel>
        <relationshipName>Campaign_Activity_History</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Campaign Activity History</relationshipLabel>
        <relationshipName>Campaign_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CorporateEntityCode__c</fullName>
        <label>Corporate Entity Code</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IL1</fullName>
                </value>
                <value>
                    <fullName>MT1</fullName>
                </value>
                <value>
                    <fullName>NM1</fullName>
                </value>
                <value>
                    <fullName>OK1</fullName>
                </value>
                <value>
                    <fullName>TX1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CreateAtRolodexAcctwithSameEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a flag that a user will set during the Marketing Cloud Journey. If checked and a campaign activity is inserted into the database, the campaign activity will be cloned and attached to Rolodex accounts that share the &quot;Sent To&quot; email address.</description>
        <label>Create at Rolodex Acct with Same Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreateAtServiceLocWithSameEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a flag that a user will set during the Marketing Cloud Journey. If checked and a campaign activity is inserted into the database, the campaign activity will be cloned and attached to Service locations that share the &quot;Sent To&quot; email address.</description>
        <label>Create at Service Loc with Same Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreatedFromMarketingCloud__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created From Marketing Cloud</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IntendedRecipient__c</fullName>
        <description>Name of the intended recipient of the Marketing Cloud communication.</description>
        <inlineHelpText>Name of the intended recipient of the communication.</inlineHelpText>
        <label>Intended Recipient</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFIN__c</fullName>
        <description>PFIN Number of address where email was sent.</description>
        <label>PFIN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProvId__c</fullName>
        <formula>AccountName__r.Prov_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prov Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SentTo__c</fullName>
        <label>Sent To</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ServiceAndPayeeLocationAddress__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service &amp; Payee Location Address</label>
        <referenceTo>CM_SPL_Addr__c</referenceTo>
        <relationshipLabel>Campaign Activity History</relationshipLabel>
        <relationshipName>Campaign_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaxId__c</fullName>
        <label>Tax Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Campaign Activity</label>
    <nameField>
        <displayFormat>CA-{0000}</displayFormat>
        <label>Activity Info</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>